// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExampleButton Snapshots > should match snapshot when disabled 1`] = `
<span
  class="t_light _dsp_contents"
>
  <span
    class=" t_light is_Theme"
    style="color: var(--color); display: contents;"
  >
    <span
      class="_dsp_contents  "
    >
      <button
        aria-disabled="true"
        class="is_Button is_View _cur-_platformweb_pointer _outlineStyle-0focus-visible-solid _outlineWidth-0focus-visible-2px _justifyContent-center _alignItems-center _fwr-nowrap _fd-row _backgroundColor-red _btw-1px _brw-1px _borderBottomWidth-1px _borderLeftWidth-1px _btc-transparent _brc-transparent _borderBottomColor-transparent _borderLeftColor-transparent _bbs-solid _bts-solid _bls-solid _brs-solid _pe-none"
        data-disable-theme="true"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="is_SizableText is_Text _cur-_platformweb_pointer _col-color _userSelect-none _flexGrow-0 _flexShrink-1 _maxWidth-10037 _ox-hidden _oy-hidden _textOverflow-ellipsis _ws-nowrap"
        >
          Disabled Button
        </span>
      </button>
      <div
        style="display: contents;"
      />
    </span>
  </span>
</span>
`;

exports[`ExampleButton Snapshots > should match snapshot with custom size 1`] = `
<span
  class="t_light _dsp_contents"
>
  <span
    class=" t_light is_Theme"
    style="color: var(--color); display: contents;"
  >
    <span
      class="_dsp_contents  "
    >
      <button
        class="is_Button is_View _cur-_platformweb_pointer _outlineStyle-0focus-visible-solid _outlineWidth-0focus-visible-2px _justifyContent-center _alignItems-center _fwr-nowrap _fd-row _backgroundColor-red _btw-1px _brw-1px _borderBottomWidth-1px _borderLeftWidth-1px _btc-transparent _brc-transparent _borderBottomColor-transparent _borderLeftColor-transparent _bbs-solid _bts-solid _bls-solid _brs-solid"
        data-disable-theme="true"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="is_SizableText is_Text _cur-_platformweb_pointer _col-color _userSelect-none _flexGrow-0 _flexShrink-1 _maxWidth-10037 _ox-hidden _oy-hidden _textOverflow-ellipsis _ws-nowrap"
        >
          Large Button
        </span>
      </button>
      <div
        style="display: contents;"
      />
    </span>
  </span>
</span>
`;

exports[`ExampleButton Snapshots > should match snapshot with custom width and height 1`] = `
<span
  class="t_light _dsp_contents"
>
  <span
    class=" t_light is_Theme"
    style="color: var(--color); display: contents;"
  >
    <span
      class="_dsp_contents  "
    >
      <button
        class="is_Button is_View _cur-_platformweb_pointer _outlineStyle-0focus-visible-solid _outlineWidth-0focus-visible-2px _justifyContent-center _alignItems-center _fwr-nowrap _fd-row _backgroundColor-red _btw-1px _brw-1px _borderBottomWidth-1px _borderLeftWidth-1px _btc-transparent _brc-transparent _borderBottomColor-transparent _borderLeftColor-transparent _bbs-solid _bts-solid _bls-solid _brs-solid _width-300px _height-60px"
        data-disable-theme="true"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="is_SizableText is_Text _cur-_platformweb_pointer _col-color _userSelect-none _flexGrow-0 _flexShrink-1 _maxWidth-10037 _ox-hidden _oy-hidden _textOverflow-ellipsis _ws-nowrap"
        >
          Custom Size Button
        </span>
      </button>
      <div
        style="display: contents;"
      />
    </span>
  </span>
</span>
`;

exports[`ExampleButton Snapshots > should match snapshot with default props 1`] = `
<span
  class="t_light _dsp_contents"
>
  <span
    class=" t_light is_Theme"
    style="color: var(--color); display: contents;"
  >
    <span
      class="_dsp_contents  "
    >
      <button
        class="is_Button is_View _cur-_platformweb_pointer _outlineStyle-0focus-visible-solid _outlineWidth-0focus-visible-2px _justifyContent-center _alignItems-center _fwr-nowrap _fd-row _backgroundColor-red _btw-1px _brw-1px _borderBottomWidth-1px _borderLeftWidth-1px _btc-transparent _brc-transparent _borderBottomColor-transparent _borderLeftColor-transparent _bbs-solid _bts-solid _bls-solid _brs-solid"
        data-disable-theme="true"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="is_SizableText is_Text _cur-_platformweb_pointer _col-color _userSelect-none _flexGrow-0 _flexShrink-1 _maxWidth-10037 _ox-hidden _oy-hidden _textOverflow-ellipsis _ws-nowrap"
        >
          Default Button
        </span>
      </button>
      <div
        style="display: contents;"
      />
    </span>
  </span>
</span>
`;

exports[`ExampleButton Snapshots > should match snapshot with long text 1`] = `
<span
  class="t_light _dsp_contents"
>
  <span
    class=" t_light is_Theme"
    style="color: var(--color); display: contents;"
  >
    <span
      class="_dsp_contents  "
    >
      <button
        class="is_Button is_View _cur-_platformweb_pointer _outlineStyle-0focus-visible-solid _outlineWidth-0focus-visible-2px _justifyContent-center _alignItems-center _fwr-nowrap _fd-row _backgroundColor-red _btw-1px _brw-1px _borderBottomWidth-1px _borderLeftWidth-1px _btc-transparent _brc-transparent _borderBottomColor-transparent _borderLeftColor-transparent _bbs-solid _bts-solid _bls-solid _brs-solid"
        data-disable-theme="true"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="is_SizableText is_Text _cur-_platformweb_pointer _col-color _userSelect-none _flexGrow-0 _flexShrink-1 _maxWidth-10037 _ox-hidden _oy-hidden _textOverflow-ellipsis _ws-nowrap"
        >
          This is a button with a very long text that might wrap to multiple lines
        </span>
      </button>
      <div
        style="display: contents;"
      />
    </span>
  </span>
</span>
`;
